--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
         margin-bottom: -8px;
       }
     </style>
-    <title>Tron</title>
+    <title>Dominion</title>
   </head>
   <body>
   </body>
